--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<h1>123123<h1/>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Мой сайт</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px 0;
+        }
+        main {
+            padding: 50px 20px;
+        }
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Добро пожаловать на мой сайт!</h1>
+    </header>
+
+    <main>
+        <p>Это главная страница моего веб-сайта.</p>
+        <p><a href="#">Узнать больше</a></p>
+    </main>
+
+</body>
+</html>
