--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     </header>
 
     <main>
-        <p>Это главная страница моего веб-сайта.</p>
-        <p><a href="#">Узнать больше</a></p>
+        <h1>Уххх как круто!</h1>
     </main>
 
 </body>
